# clvm_tools_rs

./: .gitignore  Cargo.toml  HOW_CHIALISP_IS_COMPILED.md  Makefile  clvm_tools_wasm_bg.wasm  compiler-fuzz.sh  generate-types.sh  repl.js
.github/workflows/: build-arm64-wheels.yml  build-m1-wheel.yml  build-test.yml
fuzz/: Cargo.toml  Makefile
fuzz/compile-and-execute/: Cargo.toml
fuzz/compile-and-execute/src/: main.rs
fuzz/fuzz_targets/: programs.rs
fuzz/generate-types/: Cargo.toml
fuzz/generate-types/type-test/: bower.json  package-lock.json  spago.dhall
fuzz/generate-types/type-test/src/: MainRef.purs
fuzz/src/: main.rs
fuzz/type-test/: package.json
lsp-host/: Makefile  package.json
lsp-host/src/: runner.js
mock-test/: Makefile  mock.js  package-lock.json  package.json  stepper.js
repl/: Makefile  index.js  package.json
src/: lib.rs
src/classic/bins/: chialispp.rs  dbg.rs  lsp.rs  shrink.rs
src/classic/clvm/: __type_compatibility__.rs  syntax_error.rs
src/classic/clvm_tools/: binutils.rs  clvmc.rs  cmds.rs  debug.rs
src/compiler/: cldb.rs  clvm.rs  codegen.rs  compiler.rs  comptypes.rs  evaluate.rs  frontend.rs  fuzzer.rs  inline.rs  lambda.rs  letform.rs  lsp.rs  mod.rs  optimize.rs  preprocessor.rs  rename.rs  repl.rs  sexp.rs  srcloc.rs  typechia.rs
src/compiler/dbg/: handler.rs  server.rs  types.rs
src/compiler/lsp/: completion.rs  (+9 more)
src/fuzzing/: fuzzrng.rs  mod.rs  purescript.rs
src/py/: api.rs
src/wasm/: api.rs  jsval.rs
support/: recompile_check.py
test/cmdfuzz/: Cargo.toml
wasm/: Cargo.toml
wasm/src/: api.rs
(+26 files in other folders)
